Select2'lerin içine Sonuç bulunamadı yazıldı

--- a/NOVA/Views/IsEmri/Is.cshtml
+++ b/NOVA/Views/IsEmri/Is.cshtml
@@ -780,7 +780,17 @@
                                                                     opt1.text = d[i].HAT_KODU2;
                                                                     $sel2.appendChild(opt1);
                                                                 }
-                                                                $(".selectmakina2").select2();
+                                                                $(".selectmakina2").select2(
+                                                                    {
+                                                                        "language": {
+                                                                            "noResults": function () {
+                                                                                return "Sonuç bulunamadı.";
+                                                                            }
+                                                                        },
+                                                                        escapeMarkup: function (markup) {
+                                                                            return markup;
+                                                                        }
+                                                                    });
                                                             }
 
                                                             if (value.value == "DL01") {
@@ -2203,7 +2213,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 cell.appendChild(input1);
 
 
-                                $('.selectmakina').select2();
+                                $('.selectmakina').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
 
                             }
                             else if (i == 2) {
@@ -2227,7 +2247,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 }
                                 cell.className = "text-center p-1";
                                 cell.appendChild(sl1);
-                                $('.selectchild').select2();
+                                $('.selectchild').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });;
                                 sl1.onchange = function () {
 
                                     var tt = document.getElementById("test");
@@ -2336,7 +2366,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 sl1.appendChild(opt);
                                 cell.className = "text-center p-1";
                                 cell.appendChild(sl1);
-                                $("." + cell.parentNode.rowIndex).select2();
+                                $("." + cell.parentNode.rowIndex).select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
 
                             }
                             else {
@@ -2455,7 +2495,17 @@ for (let i = 1; i < rows1.length; i++) {
                                             opt1.text = d[i].HAT_KODU2;
                                             $sel2.appendChild(opt1);
                                         }
-                                        $(".selectmakina2").select2();
+                                        $(".selectmakina2").select2(
+                                            {
+                                                "language": {
+                                                    "noResults": function () {
+                                                        return "Sonuç bulunamadı.";
+                                                    }
+                                                },
+                                                escapeMarkup: function (markup) {
+                                                    return markup;
+                                                }
+                                            });
                                         if (e.target.value == "DL01") {
                                             document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("td")[4].getElementsByTagName("input")[0].removeAttribute("disabled");
                                             document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("td")[5].getElementsByTagName("input")[0].removeAttribute("disabled");
@@ -2469,7 +2519,17 @@ for (let i = 1; i < rows1.length; i++) {
 
                                 cell.appendChild(input1);
 
-                                $('.selectmakina').select2();
+                                $('.selectmakina').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
                             }
                             else if (i == 2) {
                                 var jsonObj = @Html.Raw(Json.Encode(ViewBag.Stok_Adlari));
@@ -2496,7 +2556,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 }
                                 cell.className = "text-center p-1";
                                 cell.appendChild(sl1);
-                                $('.selectchild').select2();
+                                $('.selectchild').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
                                 sl1.onchange = function () {
 
                                     var tt = document.getElementById("test");
@@ -2586,7 +2656,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 sl1.style = "width:150px";
                                 cell.className = "text-center p-1";
                                 cell.appendChild(sl1);
-                                $("." + cell.parentNode.rowIndex).select2();
+                                $("." + cell.parentNode.rowIndex).select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
                             }
                             else if (i == th.length - 7) {
                                 if (x == 1) {
@@ -2810,7 +2890,17 @@ for (let i = 1; i < rows1.length; i++) {
                                     }
                                     cell.appendChild(input1);
                                 }
-                                $('.selectmakina2').select2();
+                                $('.selectmakina2').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
                             }
                             else if (i == th.length - 8) {
                                 cell.style = "border-bottom: hidden; border-top: hidden; width: 1px;";
@@ -2897,7 +2987,17 @@ for (let i = 1; i < rows1.length; i++) {
                                 sl.disabled = true;
                                 sl.style = "width:200px";
                                 cell.appendChild(sl);
-                                $('.js-example-basic-single').select2();
+                                $('.js-example-basic-single').select2(
+                                    {
+                                        "language": {
+                                            "noResults": function () {
+                                                return "Sonuç bulunamadı.";
+                                            }
+                                        },
+                                        escapeMarkup: function (markup) {
+                                            return markup;
+                                        }
+                                    });
 
 
                             }
@@ -3458,7 +3558,17 @@ for (let i = 1; i < rows1.length; i++) {
     var tp = 0;
     var fireag = document.getElementById("fireagirligi1");
      var fireyuz = document.getElementById("fireyuzde1");
-    $("#makkodlari").select2();
+            $("#makkodlari").select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
     document.getElementById("test").getElementsByTagName("tbody")[0].onclick = function (e) {
         console.log(e.target.parentNode.rowIndex)
         console.log(e.target.innerHTML)
@@ -4412,8 +4522,28 @@ var tpl = $.pivotUtilities.aggregatorTemplates;
 
                          }
                          $(document).ready(function () {
-                             $('.selectmakina2').select2();
-                             $('.js-example-basic-single').select2();
+                             $('.selectmakina2').select2(
+                                 {
+                                     "language": {
+                                         "noResults": function () {
+                                             return "Sonuç bulunamadı.";
+                                         }
+                                     },
+                                     escapeMarkup: function (markup) {
+                                         return markup;
+                                     }
+                                 });
+                             $('.js-example-basic-single').select2(
+                                 {
+                                     "language": {
+                                         "noResults": function () {
+                                             return "Sonuç bulunamadı.";
+                                         }
+                                     },
+                                     escapeMarkup: function (markup) {
+                                         return markup;
+                                     }
+                                 });
                              $('.js-example-basic-single').trigger("change")
 
                          });
@@ -4850,7 +4980,17 @@ var tpl = $.pivotUtilities.aggregatorTemplates;
                 table.getElementsByTagName("tr")[rownum + 1].getElementsByTagName("td")[4].getElementsByTagName("input")[0].onkeyup();
                 table.getElementsByTagName("tr")[rownum + 1].getElementsByTagName("td")[8].getElementsByTagName("select")[0].value = table.getElementsByTagName("tr")[rownum].getElementsByTagName("td")[8].getElementsByTagName("select")[0].value;
                
-                $('.js-example-basic-single').select2();
+                $('.js-example-basic-single').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('.sel').trigger("change");
                 if (x == 1) {
 
@@ -4894,7 +5034,17 @@ var tpl = $.pivotUtilities.aggregatorTemplates;
             var stokadi = document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("select")[1];
             var genislik = document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[1];
             var adet = document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[2];
-            $(".selectmakina2").select2();
+            $(".selectmakina2").select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
             stokadi.removeAttribute("disabled")
             if (value.value == "DL01") {
                 genislik.removeAttribute("disabled")
@@ -4924,7 +5074,17 @@ var tpl = $.pivotUtilities.aggregatorTemplates;
                     }
                     $sel2.appendChild(opt1);
                 }
-                $(".selectmakina2").select2();
+                $(".selectmakina2").select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 if (e.target.value == "DL01") {
                     document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("td")[4].getElementsByTagName("input")[0].removeAttribute("disabled");
                     document.getElementsByTagName("table")[1].getElementsByTagName("tr")[rownumber].getElementsByTagName("td")[5].getElementsByTagName("input")[0].removeAttribute("disabled");
