--- a/NOVA/Views/IsEmri/Test.cshtml
+++ b/NOVA/Views/IsEmri/Test.cshtml
@@ -320,7 +320,17 @@
                                                                     opt1.text = d[i].HAT_KODU2;
                                                                     $sel2.appendChild(opt1);
                                                                 }
-                                                                $(".selectmakina2").select2();
+                                                                $(".selectmakina2").select2(
+                                                                    {
+                                                                        "language": {
+                                                                            "noResults": function () {
+                                                                                return "Sonuç bulunamadı.";
+                                                                            }
+                                                                        },
+                                                                        escapeMarkup: function (markup) {
+                                                                            return markup;
+                                                                        }
+                                                                    });
                                                             })
                                                         }
                                                         stokadi.removeAttribute("disabled")
@@ -1080,7 +1090,17 @@
                 tr.appendChild(td);
             }
             table.getElementsByTagName("tbody")[0].appendChild(tr);
-            $('.js-example-basic-single').select2();
+            $('.js-example-basic-single').select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
         }
 
 
@@ -1091,7 +1111,17 @@
             var tp = 0;
     var fireag = document.getElementById("fireagirligi1");
     var fireyuz = document.getElementById("fireyuzde1");
-    $("#makkodlari").select2();
+            $("#makkodlari").select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
             var takiplist = [];
             var p = [];
             if (localStorage.list10 != "null" && localStorage.list10!=null) {
@@ -1614,8 +1644,28 @@
 
                          }
                          $(document).ready(function () {
-                             $('.selectmakina2').select2();
-                             $('.js-example-basic-single').select2();
+                             $('.selectmakina2').select2(
+                                 {
+                                     "language": {
+                                         "noResults": function () {
+                                             return "Sonuç bulunamadı.";
+                                         }
+                                     },
+                                     escapeMarkup: function (markup) {
+                                         return markup;
+                                     }
+                                 });
+                             $('.js-example-basic-single').select2(
+                                 {
+                                     "language": {
+                                         "noResults": function () {
+                                             return "Sonuç bulunamadı.";
+                                         }
+                                     },
+                                     escapeMarkup: function (markup) {
+                                         return markup;
+                                     }
+                                 });
 
                          });
                          x++;
