--- a/NOVA/Views/Satis/DetayliSiparis_yedek.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis_yedek.cshtml
@@ -132,7 +132,17 @@
                 </select>
                 <script>
                     $(document).ready(function () {
-                        $('.js-example-basic-multiple').select2();
+                        $('.js-example-basic-multiple').select2(
+                            {
+                                "language": {
+                                    "noResults": function () {
+                                        return "Sonuç bulunamadı.";
+                                    }
+                                },
+                                escapeMarkup: function (markup) {
+                                    return markup;
+                                }
+                            });
                     });
                 </script>
             </div>
