--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -566,7 +566,17 @@
                 })
             }
             else {
-                $('#filter').select2();
+                $('#filter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
                 $('#filter').select2('destroy');
                 $('#filter').hide();
 
