--- a/NOVA/Views/Satis/FiyatsizHammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatsizHammaddeListesi.cshtml
@@ -724,11 +724,61 @@
             }).done(function () {
                
                 document.getElementById("progress").style.display = "none";
-                $('#rulokodufilter').select2();
-                $('#renkkodufilter').select2();
-                $('#kalinlikfilter').select2();
-                $('#genislikfilter').select2();
-                $('#menseifilter').select2();
+                $('#rulokodufilter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
+                $('#renkkodufilter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
+                $('#kalinlikfilter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
+                $('#genislikfilter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
+                $('#menseifilter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });;
                 var fiyatlar = [];
                 var rows = document.getElementById("tbody").getElementsByTagName("tr");
 
