--- a/NOVA/Views/Satis/ZiyaretNotlarim.cshtml
+++ b/NOVA/Views/Satis/ZiyaretNotlarim.cshtml
@@ -425,7 +425,17 @@
         var cities = @Html.Raw(Json.Encode(ViewBag.Cities));
         var musteriler = @Html.Raw(Json.Encode(ViewBag.Musteriler));
         $(document).ready(function () {
-            $('.form-select').select2();
+            $('.form-select').select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
 
 
             var sl = document.getElementById("il");
@@ -476,7 +486,17 @@
                 $("#ISIM").removeAttr("style").hide();
                 $("#musteri").show();
                 $("#musteri").attr("style", "width:100%");
-                $("#musteri").select2();
+                $("#musteri").select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $("#plasiyer").prop("disabled", true);
             }
 
@@ -549,7 +569,17 @@
             row.appendChild(col2);
             row.appendChild(col3);
             card.appendChild(row);
-            $('.form-select').select2();
+            $('.form-select').select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
         }
         function musterichange(value) {
             var bilgiler = musteriler.filter(x => x.MUSTERI_ID == value);
