--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -976,8 +976,28 @@
                 $("#plasiyer1").hide();
 
             } else {
-                $("#plasiyer").select2();
-                $("#plasiyer1").select2();
+                $("#plasiyer").select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
+                $("#plasiyer1").select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
             }
 
 
