--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2161,7 +2161,15 @@
                         console.log(data);
                         if (d[0].ISEMRINO.substring(0, 2) != 'MH' && d[0].ISEMRINO.substring(0, 2) != 'BK') {
                             if (d[0].KULL_MIKTAR != 0) {
-                                load(url);
+                                if (data.substring(0, 4) != 'HATA') {
+
+                                    load(url);
+                                } else {
+                                    $("#progress2").hide();
+                                    $("#SiparisModal").modal('hide');
+                                    Swal.fire('Başarısız!', data, 'error');
+                                    document.getElementById(btnid).onclick();
+                                }
                             } else {
                                 $("#progress2").hide();
                                 $("#SiparisModal").modal('hide');
