--- a/NOVA/Views/YonetimPaneli/Kullanici.cshtml
+++ b/NOVA/Views/YonetimPaneli/Kullanici.cshtml
@@ -831,9 +831,28 @@
                 })
             }
             else if (value == 4) {
-                $('#filter').select2({ placeholder: 'Kullanıcı Filtreleme', width: '90%', float: 'end' });
+                $('#filter').select2({
+                    placeholder: 'Kullanıcı Filtreleme', width: '90%', float: 'end' , "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+});
                 $('#filter').show();
-                $('#filter2').select2();
+                $('#filter2').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter2').select2('destroy');
                 $('#filter2').hide();
                 $('#table').bootstrapTable('destroy');
@@ -903,10 +922,30 @@
                 })
             }
             else if (value == 3) {
-                $('#filter').select2();
+                $('#filter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter').select2('destroy');
                 $('#filter').hide();
-                $('#filter2').select2();
+                $('#filter2').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter2').select2('destroy');
                 $('#filter2').hide();
                 $('#table').bootstrapTable('destroy');
@@ -931,10 +970,30 @@
 
                 })
             } else if(value==5){
-                $('#filter').select2();
+                $('#filter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter').select2('destroy');
                 $('#filter').hide();
-                $('#filter2').select2();
+                $('#filter2').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter2').select2('destroy');
                 $('#filter2').hide();
                 $('#table').bootstrapTable('destroy');
@@ -982,10 +1041,30 @@
                 })
             }
             else if (value == 6) {
-                $('#filter').select2();
+                $('#filter').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter').select2('destroy');
                 $('#filter').hide();
-                $('#filter2').select2();
+                $('#filter2').select2(
+                    {
+                        "language": {
+                            "noResults": function () {
+                                return "Sonuç bulunamadı.";
+                            }
+                        },
+                        escapeMarkup: function (markup) {
+                            return markup;
+                        }
+                    });
                 $('#filter2').select2('destroy');
                 $('#filter2').hide();
                 $('#table').bootstrapTable('destroy');
