--- a/NOVA/Views/YonetimPaneli/MailFormToplu.cshtml
+++ b/NOVA/Views/YonetimPaneli/MailFormToplu.cshtml
@@ -127,7 +127,17 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('.js-example-basic-multiple').select2();
+            $('.js-example-basic-multiple').select2(
+                {
+                    "language": {
+                        "noResults": function () {
+                            return "Sonuç bulunamadı.";
+                        }
+                    },
+                    escapeMarkup: function (markup) {
+                        return markup;
+                    }
+                });
         });
     </script>
     <script>
